# number2text-rs

./: Cargo.toml  README.md  number2text  package.sh  resources.gresource.xml
packaging/: PKGBUILD  app.rayadams.number2text.metainfo.xml  control  makeman.sh  number2text.1  number2text.spec  postinst  set_app_versions.sh
packaging/flatpak/: app.rayadams.number2text.desktop  app.rayadams.number2text.yml  update_flatpak.sh
packaging/gui/: app.rayadams.number2text.desktop
packaging/rpmpublish/: app.rayadams.number2text.spec  gen-vendor.sh
snap/: snapcraft.yaml
snap/gui/: number2text.desktop
src/: cmdline.rs  init_icon.rs  main.rs  settings.rs  view_model.rs
src/providers/: base_converter.rs  english_converter.rs  french_converter.rs  german_converter.rs  italian_converter.rs  mod.rs  number_converter.rs  russian_converter.rs  spanish_converter.rs
