[package]
name = "number2text"
version = "2.2.1+26"
edition = "2024"
authors = ["Konstantin Adamov <xrayadamo@gmail.com>"]
description = "A GUI application that converts numbers to text in various languages."
license = "MIT"
repository = "https://github.com/XRayAdams/number2text-rs"

[dependencies]
gtk4 = "0.10"
libadwaita = { version = "0.8", features = ["v1_5"] }
clap = { version = "4.5", features = ["derive"] }
